# django-tools

./: .coveragerc  .coveralls.yml  .editorconfig  .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .project  .pydevproject  .style.yapf  .travis.yml  AUTHORS  LICENSE  MANIFEST.in  Makefile  README  README.creole  README.md  README.rst  README.textile  manage.py  manage.sh  noxfile.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.dev.txt  requirements.django32.txt  requirements.django41.txt  requirements.django42.txt  requirements.django51.txt  requirements.txt  run_pytest.py  run_test_project_dev_server.sh  runtests.sh  setup.cfg  setup.py  tox.ini  (+1 more)
.github/workflows/: pythonapp.yml  tests.yml
.run/: Template Django tests.run.xml  Unittests - __all__.run.xml  manage.py nox.run.xml
django-tools/: __init__.py
django-tools/unittest/: BrowserDebug.py  unittest_base.py
django_tools/: __init__.py  apps.py  context_managers.py  context_processors.py  decorators.py  exception_plus.py  fields.py  forms_utils.py  limit_to_usergroups.py  model_utils.py  models.py  permissions.py  publish.py  settings_utils.py  upgrade_virtualenv.py  validators.py  version.py  widgets.py
django_tools/admin_tools/: test_generator.py
django_tools/auto_update_cache/: README.creole  filebased.py
django_tools/cache/: README.creole  site_cache_middleware.py  smooth_cache_backends.py
django_tools/debug/: README.creole  delay.py  middlewares.py
django_tools/dynamic_site/: README.creole  admin.py  middleware.py  models.py  test_settings.py  tests.py
django_tools/fields/: directory.py  language_code.py  media_path.py  sign_separated.py  static_path.py  url.py
django_tools/file_storage/: file_system_storage.py
django_tools/filemanager/: README.creole  exceptions.py  filemanager.py  filesystem_browser.py  tests.py  utils.py
django_tools/fixture_tools/: languages.py
django_tools/local_sync_cache/: LocalSyncCacheMiddleware.py  local_sync_cache.py
django_tools/log_utils/: syslog_handler.py  throttle_admin_email_handler.py
django_tools/mail/: celery_tasks.py  send_mail.py  settings.py
django_tools/middlewares/: DynamicSite.py  LogHeaders.py  QueryLogMiddleware.py  SlowerDevServer.py  ThreadLocal.py  TracebackLogMiddleware.py  WerkzeugLocal.py  local_auto_login.py
django_tools/model_version_protect/: README.md  apps.py  models.py
django_tools/parler_utils/: parler_fixtures.py
django_tools/playwright/: base.py  utils.py
django_tools/selenium/: base.py  chromedriver.py  cli.py  django.py  geckodriver.py  response.py  utils.py
django_tools/serve_media_app/: README.md  apps.py  constants.py  exceptions.py  models.py  urls.py  utils.py
django_tools/tagging_addon/: fields.py  forms.py  widgets.py
django_tools/template/: filters.py  loader.py  render.py  warn_invalid_template_vars.py
django_tools/tests/: __init__.py  models.py  test_dom_asserts.py  test_limit_to_usergroups.py  test_local_sync_cache.py  test_settings.py
django_tools/unittest/: BrowserDebug.py  unittest_base.py
django_tools/unittest_utils/: BrowserDebug.py  assertments.py  call_management_commands.py  celery.py  celery_utils.py  disable_migrations.py  django_command.py  email.py  html.py  isolated_filesystem.py  logging_utils.py  mockup.py  model_test_code_generator.py  print_sql.py  project_setup.py  selenium_utils.py  signals.py  stdout_redirect.py  temp_media_root.py  tempdir.py  template.py  unittest_base.py  user.py
django_tools/utils/: client_storage.py  html_utils.py  http.py  importlib.py  info_print.py  installed_apps_utils.py  messages.py  request.py  stack_info.py  time_utils.py  url.py
django_tools/views/: csrf.py
django_tools_project/: __init__.py  __main__.py  constants.py  manage.py  middlewares.py  urls.py  wsgi.py
django_tools_project/django_tools_test_app/: admin.py  models.py  views.py
django_tools_project/settings/: local.py  prod.py  tests.py
django_tools_project/tests/: __init__.py  conftest.py  test_ThreadLocal_middleware.py  test_TracebackLogMiddleware.py  test_admin.py  test_admin_staff_admin_index_django42_1.snapshot.html  test_admin_superuser_admin_index_django41_1.snapshot.html  test_admin_superuser_admin_index_django51_1.snapshot.html  test_admin_superuser_admin_index_django52_1.snapshot.html  test_assertments.py  test_basics.py  test_commands.py  test_commands_help_django4.2.snapshot.txt  test_commands_list_models_1.snapshot.txt  test_commands_nice_diffsettings_1.snapshot.txt  test_commands_nice_diffsettings_django4.2.snapshot.txt  test_commands_run_testserver_1.snapshot.txt  test_commands_run_testserver_invalid_addr_1.snapshot.txt  (+52 more)
django_tools_test_project/: __init__.py  manage.py  test_settings.py  urls.py
django_tools_tests/: test_ThreadLocal_middleware.py  test_TracebackLogMiddleware.py  test_assertments.py  test_basics.py  test_commands.py  test_database_info.py  test_debug_delay.py  test_doctests.py  test_dom_asserts.py  test_dynamic_site.py  test_email.py  test_file_system_storage.py  test_filesystem_browser.py  test_html_utils.py  test_installed_apps_utils.py  test_isolated_filesystem.py  test_limit_to_usergroups.py  test_local_sync_cache.py  test_log_utils.py  test_logging_utils.py  test_mockup.py  test_model_test_generator.py  test_parler_fixtures.py  test_permissions.py  test_project_setup.py  test_render.py  test_request_utils.py  test_selenium_old_usage.py  test_settings_utils.py  test_signed_cookie.py  test_template_loader.py  test_unittest_celery.py  test_unittest_django_command.py  test_unittest_selenium.py  test_unittest_utils.py  test_unittest_utils_user.py  test_url.py  test_utils_importlib.py  test_utils_url.py  test_warn_decorators.py
tests/: runtests.py  test_ThreadLocal_middleware.py  test_doctests.py  test_dom_asserts.py  test_dynamic_site.py  test_filesystem_browser.py  test_installed_apps_utils.py  test_limit_to_usergroups.py  test_local_sync_cache.py  test_mockup.py  test_signed_cookie.py  test_unittest_django_command.py  test_unittest_utils.py  test_url.py  test_utils_http.py
(+93 files in other folders)
